Added misc content
fun for my friend

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,10 @@
 
-    <h1> <img src="./assets/img/burger.png" alt="burger icon" id="burg-img">EAT-DA-BURGER<img src="./assets/img/burger.png" alt="burger icon" id="burg-img"> </h1>
+    <h1> <img src="./assets/img/burger.png" alt="burger icon" id="burg-img">EAT-D'Benedetto-BURGER<img src="./assets/img/burger.png" alt="burger icon" id="burg-img"> </h1>
 <div class="box">
   
   <div class="burgerGenie"> 
    <h2>BURGER GENIE</h2>
-   <h4> Enter a BURGER you'd like to EAT! </h4>
+   <h4> Enter a Jen D'Benedetto BURGER you'd like to EAT! </h4>
     <form action="/api/burgers" method="POST" class="create-form">
     <div class="form-group">
       <input class="form-input" type="text" id="burg" name="burger_name"></input>
