--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
-		<title>Devour Da Burger!!!!!</title>
+		<title>Devour Da Jen D'Benedetto Burger!!!!!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/assets/js/burgers.js"></script>
 	</head>
