--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Londrina+Outline');
 
 html{
-	background-color:#f2d280;
+	background-color:#f5d37c;
 }
 body {
 	font-family: arial, helvetica, 'helvetica neue', georgia;
