--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,8 +3,9 @@
 <div class="box">
   
   <div class="burgerGenie"> 
+  <h2> Happy Birthday Jen D'Benedetto </h2>
    <h2>BURGER GENIE</h2>
-   <h4> Enter a Jen D'Benedetto BURGER you'd like to EAT! </h4>
+   <h4> Enter a BURGER you'd like to EAT! </h4>
     <form action="/api/burgers" method="POST" class="create-form">
     <div class="form-group">
       <input class="form-input" type="text" id="burg" name="burger_name"></input>
