--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 
-    <h1> <img src="./assets/img/burger.png" alt="burger icon" id="burg-img">EAT-D'Benedetto-BURGER<img src="./assets/img/burger.png" alt="burger icon" id="burg-img"> </h1>
+    <h1> <img src="./assets/img/burger.png" alt="burger icon" id="burg-img">EAT-Da-BURGER<img src="./assets/img/burger.png" alt="burger icon" id="burg-img"> </h1>
 <div class="box">
   
   <div class="burgerGenie"> 
